turtleart.lessons.turtleart.Main.DiskFourth.scala.error
Source:8: error: not found: value i
		droite(arc/i)
                           ^